<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".view.activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/logo"
            android:background="@color/grey" />

        <ImageView
            android:layout_width="@dimen/logo"
            android:layout_height="@dimen/logo"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/logo"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_round_img" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logo"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/parent_child">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_identity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/hint_id"
            android:drawableEnd="@drawable/ic_account_circle_black_24dp"
            android:drawableRight="@drawable/ic_account_circle_black_24dp"
            android:hint="@string/hint_id"
            android:inputType="text"
            android:paddingBottom="@dimen/parent_child"
            tools:targetApi="o" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/parent_child"
            android:autofillHints="@string/hint_id"
            android:drawableEnd="@drawable/ic_lock_black_24dp"
            android:drawableRight="@drawable/ic_lock_black_24dp"
            android:hint="@string/hint_pwd"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:paddingBottom="@dimen/parent_child"
            tools:targetApi="o" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/child_child"
                android:layout_weight="1"
                android:text="@string/login" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/child_child"
                android:layout_weight="1"
                android:text="@string/create_account"
                android:textAllCaps="false" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_forgot_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/child_child"
            android:text="@string/forgot_password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/child_child"
            android:gravity="center">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/child_child"
                android:layout_marginEnd="@dimen/child_child"
                android:text="@string/or" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/grey" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/child_child"
            android:text="@string/connect_with" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/child_child"
            android:gravity="center">

            <Button
                android:id="@+id/btn_fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/parent_child"
                android:paddingEnd="@dimen/parent_child"
                android:text="@string/facebook"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/parent_child"
                android:paddingEnd="@dimen/parent_child"
                android:text="@string/google"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>